# auc

./: LICENSE  auc.cabal  stack.yaml
exe/: ExplJack.hs  Main.hs
src/: AUC.hs
